--- a/css/myresume.css
+++ b/css/myresume.css
@@ -1,5 +1,11 @@
 body {
 	font-family: 'Noto Sans TC', sans-serif;
+	font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    background-color: #ff6347;
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
